# glsl_trace

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md
.github/workflows/: linux.yml  windows.yml
cmake/: download_glew.cmake  download_glfw.cmake  download_glslang.cmake  download_spirvcross.cmake  download_vk.cmake  project_template.cmake
shader_trace/: CMakeLists.txt
shader_trace/include/: Base.h  ShaderTrace.h
shader_trace/source/: Common.h  InsertFunctionProfiler.cpp  InsertShaderClockHeatmap.cpp  InsertShaderClockMap.cpp  InsertTraceRecording.cpp  ParseShaderTrace.cpp  ShaderTrace.cpp  Utils.cpp
spv_compiler/: CMakeLists.txt
spv_compiler/include/: SpvCompiler.h
spv_compiler/source/: SpvCompiler.cpp
tests/opengl/: CMakeLists.txt  ShaderCompiler.cpp  ShaderCompiler.h  ShaderPerf_Test1.cpp  ShaderTrace_Test1.cpp  main.cpp
tests/ref/: ShaderTrace_Test1.txt  ShaderTrace_Test11.txt  ShaderTrace_Test12.txt  ShaderTrace_Test13.txt  ShaderTrace_Test14.txt  ShaderTrace_Test2.txt  ShaderTrace_Test4.txt  ShaderTrace_Test6.txt  ShaderTrace_Test8.txt  ShaderTrace_Test9.txt
tests/utils/: Utils.cpp  Utils.h
tests/vulkan/: CMakeLists.txt  ClockMap_Test1.cpp  ClockMap_Test2.cpp  Device.cpp  Device.h  ResourceLimits.h  ShaderPerf_Test1.cpp  ShaderTrace_Test1.cpp  ShaderTrace_Test10.cpp  ShaderTrace_Test11.cpp  ShaderTrace_Test12.cpp  ShaderTrace_Test13.cpp  ShaderTrace_Test14.cpp  ShaderTrace_Test2.cpp  ShaderTrace_Test3.cpp  ShaderTrace_Test4.cpp  ShaderTrace_Test5.cpp  ShaderTrace_Test6.cpp  ShaderTrace_Test7.cpp  ShaderTrace_Test8.cpp  ShaderTrace_Test9.cpp  TestDevice.cpp  TestDevice.h  VulkanLoader.cpp  VulkanLoader.h  fn_vulkan_dev.h  fn_vulkan_inst.h  fn_vulkan_lib.h  main.cpp
